--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.3"
+    "express": "^4.18.3",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "typescript": "^5.4.2"
