--- a/server/package.json
+++ b/server/package.json
@@ -3,14 +3,19 @@
   "version": "1.0.0",
   "description": "",
   "main": "main.ts",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "backend": "npx tsx main.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.3",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "mysql2": "^3.9.3",
+    "tsx": "^4.7.2",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
     "typescript": "^5.4.2"
