--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/multer": "^1.4.11",
     "express": "^4.18.3",
-    "mysql": "^2.18.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.3",
     "tsx": "^4.7.2",
     "winston": "^3.13.0"
