--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
     "@angular/platform-browser": "^17.2.0",
     "@angular/platform-browser-dynamic": "^17.2.0",
     "@angular/router": "^17.2.0",
+    "ace-builds": "^1.33.2",
+    "bootstrap": "^5.3.3",
+    "font-awesome": "^4.7.0",
     "marked": "^12.0.2",
     "ngx-markdown": "^17.2.0",
+    "ngx-markdown-editor": "^5.3.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
