--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "marked": "^12.0.2",
     "ngx-markdown": "^17.2.0",
     "ngx-markdown-editor": "^5.3.4",
+    "node-forge": "^1.3.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -33,6 +34,7 @@
     "@angular/cli": "^17.2.2",
     "@angular/compiler-cli": "^17.2.0",
     "@types/jasmine": "~5.1.0",
+    "@types/node": "^20.14.2",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
