--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/multer": "^1.4.11",
     "express": "^4.18.3",
+    "google-auth-library": "^9.14.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.3",
     "tsx": "^4.7.2",
