--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express-mysql-session": "^3.0.6",
     "@types/express-session": "^1.18.0",
     "@types/multer": "^1.4.11",
     "express": "^4.18.3",
+    "express-mysql-session": "^3.0.3",
     "express-session": "^1.18.0",
     "google-auth-library": "^9.14.1",
     "multer": "^1.4.5-lts.1",
