Issue #13: Added compodoc (angular), jsdoc, better-docs (backend). Need to comment code.

--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "backend": "npx tsx main.ts"
+    "backend": "npx tsx main.ts",
+    "doc": "node_modules\\.bin\\jsdoc -c jsdoc.config.json -d ..\\documentation-server -r ."
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +19,7 @@
     "express-mysql-session": "^3.0.3",
     "express-session": "^1.18.0",
     "google-auth-library": "^9.14.1",
+    "jsdoc": "^4.0.3",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.3",
     "tsx": "^4.7.2",
