--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^5.0.0",
     "@types/express-mysql-session": "^3.0.6",
     "@types/express-session": "^1.18.0",
     "@types/multer": "^1.4.11",
+    "better-docs": "^2.7.3",
     "express": "^4.18.3",
     "express-mysql-session": "^3.0.3",
     "express-session": "^1.18.0",
