Issue #8: Added jsdoc comments to server code.

--- a/server/jsdoc.config.json
+++ b/server/jsdoc.config.json
@@ -10,6 +10,7 @@
         "allowUnknownTags": true
     },
     "plugins": [
-        "node_modules/better-docs/typescript"
+        "node_modules/better-docs/typescript",
+        "node_modules/better-docs/category"
     ]
 }
