Issue #7: Updating production branch with new build. Fixing merge mistake with angular json.

--- a/angular.json
+++ b/angular.json
@@ -66,6 +66,12 @@
                   "with": "src/environments/environment.development.ts"
                 }
               ]
+            },
+            "dev-watch": {
+              "outputPath": {
+                "base": "docs/",
+                "browser": ""
+              }
             }
           },
           "defaultConfiguration": "production"
