--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,7 @@
               {
                 "glob": "**/*",
                 "input": "node_modules/ace-builds/src-min",
-                "output": "./assets/ace-builds/"
+                "output": "./src/ace-builds/"
               }
             ],
             "styles": [
